--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tinderで出会ってみた">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/icons8.png">
+    <link rel="icon" href="https://yasu-works.github.io/test-up1/icons8.png">
     <title>BLOG|Tinderで出会ってみた</title>
 </head>
 <body>
@@ -15,14 +15,14 @@
     <header id="header">
         <div class="header-wrapper">
             <div class="site-title">
-                <img class="icon" src="img/icons8.png" alt="Tinder白アイコン">
+                <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
                 <h1>Tinderで出会ってみた</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">ホーム</a></li>
-                    <li><a href="#">記事一覧</a></li>
-                    <li><a href="#">利用規約</a></li>
+                    <li><a href="https://yasu-works.github.io/test-up1">ホーム</a></li>
+                    <li><a href="https://yasu-works.github.io/test-up1/archive.html">記事一覧</a></li>
+                    <li><a href="https://yasu-works.github.io/test-up1/terms-of-service.html">利用規約</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +39,7 @@
             <main class="main-wrapper">
                 <!-- ブログコンテンツ -->
                 <div class="blog-contents">
-                    <img src="img/blog-img.png" alt="">
+                    <img src="https://yasu-works.github.io/test-up1/blog-img.png" alt="">
                     <h2>ブログタイトル</h2>
                     <p>
                         テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -98,15 +98,15 @@
             <aside class="sidebar">
                 <!-- サイドバー：プロフィール -->
                 <div class="blog-profile">
-                    <img src="img/profile-img-sample.png" alt="">
+                    <img src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
                     <h3>ヤマダ タロウ</h3>
                     <p>
                         テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                     </p>
                     <ul class="blog-pr-icons">
-                        <li><a href="#"><img src="img/icons8-ツイッター-50.png" alt=""></a></li>
-                        <li><a href="#"><img src="img/icons8-インスタグラム-50.png" alt=""></a></li>
-                        <li><a href="#"><img src="img/icons8-フェイスブック-64.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
                     </ul>
                 </div>
     
@@ -115,38 +115,38 @@
                     <h3 class="section-title">人気記事</h3>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="img/archive-img1.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="img/archive-img2.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="img/archive-img3.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <!-- サイドバー：SP表示時にプラスで表示させる記事部分（3記事分） -->
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/archive-img1.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/archive-img2.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/archive-img3.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
@@ -198,7 +198,7 @@
                 <!-- ブログタイトル -->
                 <li class="footer-itemlist">
                     <div class="footer-title">
-                        <img src="img/icons8.png" alt="">
+                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="">
                         <h1>Tinderで<br>出会ってみた</h1>
                     </div>
                 </li>
@@ -208,10 +208,10 @@
                         <li class="footer-itemlist ft-sitemap">
                             <h3>SITE MAP</h3>
                             <ul class="site-map">
-                                <li>ホーム</li>
-                                <li>記事一覧</li>
-                                <li>ブログ</li>
-                                <li>利用規約</li>
+                                <a href="https://yasu-works.github.io/test-up1"><li>ホーム</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/archive.html"><li>記事一覧</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/blog.html"><li>ブログ</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/terms-of-service.html"><li>利用規約</li></a>
                             </ul>
                         </li>
                     </div>
@@ -219,14 +219,14 @@
                         <!-- フッター：プロフィール -->
                         <li class="footer-itemlist ft-profile-center">
                             <h4>PROFILE</h4>
-                            <img class="ft-pr-ic" src="img/profile-img-sample.png" alt="">
+                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
                             <p class="ft-profile-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <h3 class="ft-link-text">LINK</h3>
                             <!-- SNSアイコンリスト -->
                             <ul class="sns-icon-list">
-                                <li><a href="#"><img src="img/icons8-ツイッター-50.png" alt=""></a></li>
-                                <li><a href="#"><img src="img/icons8-インスタグラム-50.png" alt=""></a></li>
-                                <li><a href="#"><img class="facebook-icon" src="img/icons8-フェイスブック-64.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
+                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
                             </ul>
                         </li>
                     </div>
