--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
                     <ul class="blog-pr-icons">
                         <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
                         <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
-                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
+                        <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
                     </ul>
                 </div>
     
