--- a/blog.html
+++ b/blog.html
@@ -115,38 +115,38 @@
                     <h3 class="section-title">人気記事</h3>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
+                            <img src="img/archive-img6.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
+                            <img src="img/archive-img2.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
+                            <img src="img/archive-img4.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <!-- サイドバー：SP表示時にプラスで表示させる記事部分（3記事分） -->
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
+                            <img src="img/blog-img3.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
+                            <img src="img/archive-img1.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
+                            <img src="img/watch.png" alt="">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
