--- a/archive.html
+++ b/archive.html
@@ -52,37 +52,37 @@
                     <!-- ブログリスト -->
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
@@ -104,37 +104,37 @@
                 <div>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="">
+                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
@@ -186,7 +186,7 @@
                 <!-- ブログタイトル -->
                 <li class="footer-itemlist">
                     <div class="footer-title">
-                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="">
+                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
                         <h1>Tinderで<br>出会ってみた</h1>
                     </div>
                 </li>
@@ -207,14 +207,14 @@
                         <!-- フッター：プロフィール -->
                         <li class="footer-itemlist ft-profile-center">
                             <h4>PROFILE</h4>
-                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
+                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="プロフィール画像">
                             <p class="ft-profile-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <h3 class="ft-link-text">LINK</h3>
                             <!-- SNSアイコンリスト -->
                             <ul class="sns-icon-list">
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
-                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt="Twitterアイコン"></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt="Instagramアイコン"></a></li>
+                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt="Facebookアイコン"></a></li>
                             </ul>
                         </li>
                     </div>
