--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
             <main class="main-wrapper">
                 <!-- ブログコンテンツ -->
                 <div class="blog-contents">
-                    <img src="https://yasu-works.github.io/test-up1/blog-img.png" alt="">
+                    <img src="https://yasu-works.github.io/test-up1/blog-img.png" alt="ブログメイン画像">
                     <h2>ブログタイトル</h2>
                     <p>
                         テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -98,15 +98,15 @@
             <aside class="sidebar">
                 <!-- サイドバー：プロフィール -->
                 <div class="blog-profile">
-                    <img src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
+                    <img src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="プロフィール画像">
                     <h3>ヤマダ タロウ</h3>
                     <p>
                         テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                     </p>
                     <ul class="blog-pr-icons">
-                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
-                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
-                        <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt="Twitterアイコン"></a></li>
+                        <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt="Instagramアイコン"></a></li>
+                        <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt="Facebookアイコン"></a></li>
                     </ul>
                 </div>
     
@@ -115,38 +115,38 @@
                     <h3 class="section-title">人気記事</h3>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="img/archive-img6.png" alt="">
+                            <img src="img/archive-img6.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="img/archive-img2.png" alt="">
+                            <img src="img/archive-img2.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="img/archive-img4.png" alt="">
+                            <img src="img/archive-img4.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <!-- サイドバー：SP表示時にプラスで表示させる記事部分（3記事分） -->
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/blog-img3.png" alt="">
+                            <img src="img/blog-img3.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/archive-img1.png" alt="">
+                            <img src="img/archive-img1.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="img/watch.png" alt="">
+                            <img src="img/watch.png" alt="ブログイメージ画像">
                             <h4>タイトルタイトル</h4>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
@@ -198,7 +198,7 @@
                 <!-- ブログタイトル -->
                 <li class="footer-itemlist">
                     <div class="footer-title">
-                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="">
+                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
                         <h1>Tinderで<br>出会ってみた</h1>
                     </div>
                 </li>
@@ -219,14 +219,14 @@
                         <!-- フッター：プロフィール -->
                         <li class="footer-itemlist ft-profile-center">
                             <h4>PROFILE</h4>
-                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
+                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="プロフィール画像">
                             <p class="ft-profile-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <h3 class="ft-link-text">LINK</h3>
                             <!-- SNSアイコンリスト -->
                             <ul class="sns-icon-list">
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
-                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt="Twitterアイコン"></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt="Instagramアイコン"></a></li>
+                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt="Facebookアイコン"></a></li>
                             </ul>
                         </li>
                     </div>
