--- a/blog.html
+++ b/blog.html
@@ -115,39 +115,51 @@
                     <h3 class="section-title">人気記事</h3>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <!-- サイドバー：SP表示時にプラスで表示させる記事部分（3記事分） -->
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/blog-img3.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/blog-img3.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
-                            <img src="https://yasu-works.github.io/test-up1/watch.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/watch.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="#">続きを見る</a>
                         </li>
