--- a/archive.html
+++ b/archive.html
@@ -52,38 +52,50 @@
                     <!-- ブログリスト -->
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
@@ -104,38 +116,50 @@
                 <div>
                     <ul class="blog-list">
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img1.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img2.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img3.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img4.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img5.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
-                            <h4>タイトルタイトル</h4>
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
+                                <img src="https://yasu-works.github.io/test-up1/archive-img6.png" alt="ブログイメージ画像">
+                                <h4>タイトルタイトル</h4>
+                            </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <a href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
