--- a/archive.html
+++ b/archive.html
@@ -18,13 +18,32 @@
                 <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
                 <h1>Tinderで出会ってみた</h1>
             </div>
+
+            <!-- ハンバーガーメニューボタン -->
+            <div id="toggle_btn" class="toggle_btn pc-toogle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <div id="modal" class="modal-sp"></div>
+
+
+            <!-- PC用ハンバーガーメニュー -->
             <nav>
-                <ul>
+                <ul class="pc-navmenu">
                     <li><a href="https://yasu-works.github.io/test-up1">ホーム</a></li>
                     <li><a href="https://yasu-works.github.io/test-up1/archive.html">記事一覧</a></li>
                     <li><a href="https://yasu-works.github.io/test-up1/terms-of-service.html">利用規約</a></li>
                 </ul>
             </nav>
+
+            <!-- SP用ハンバーガーメニュー -->
+            <ul id="menu" class="menu-sp">
+                <li><a href="https://yasu-works.github.io/test-up1">ホーム</a></li>
+                <li><a href="https://yasu-works.github.io/test-up1/archive.html">記事一覧</a></li>
+                <li><a href="https://yasu-works.github.io/test-up1/terms-of-service.html">利用規約</a></li>
+            </ul>
         </div>
     </header>
 
@@ -247,5 +266,6 @@
         </nav>
         <p class="copyright">&copy;copy right</p>
     </footer>
+    <script src="./hamburger.js"></script>
 </body>
 </html>
