--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
                             <a href="https://yasu-works.github.io/test-up1/blog.html">
@@ -147,7 +147,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                         <li class="blog-item">
                             <a href="https://yasu-works.github.io/test-up1/blog.html">
@@ -155,7 +155,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                         <!-- サイドバー：SP表示時にプラスで表示させる記事部分（3記事分） -->
                         <li class="blog-item sp-bloglist-active">
@@ -164,7 +164,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
                             <a href="https://yasu-works.github.io/test-up1/blog.html">
@@ -172,7 +172,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                         <li class="blog-item sp-bloglist-active">
                             <a href="https://yasu-works.github.io/test-up1/blog.html">
@@ -180,7 +180,7 @@
                                 <h4>タイトルタイトル</h4>
                             </a>
                             <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                            <a href="#">続きを見る</a>
+                            <a class="next-page" href="#">続きを見る</a>
                         </li>
                     </ul>
                 </div>
