--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -177,10 +177,10 @@
                         <li class="footer-itemlist ft-sitemap">
                             <h3>SITE MAP</h3>
                             <ul class="site-map">
-                                <li>ホーム</li>
-                                <li>記事一覧</li>
-                                <li>ブログ</li>
-                                <li>利用規約</li>
+                                <a href="https://yasu-works.github.io/test-up1"><li>ホーム</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/archive.html"><li>記事一覧</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/blog.html"><li>ブログ</li></a>
+                                <a href="https://yasu-works.github.io/test-up1/terms-of-service.html"><li>利用規約</li></a>
                             </ul>
                         </li>
                     </div>
