--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <a class="next-page" href="https://yasu-works.github.io/test-up1/blog.html">続きを見る</a>
                         </li>
                         <li class="blog-item">
-                            <a href="">
+                            <a href="https://yasu-works.github.io/test-up1/blog.html">
                                 <img src="https://yasu-works.github.io/test-up1/blog-img2.png" alt="ブログイメージ画像">
                                 <h4>タイトルタイトル</h4>
                             </a>
