--- a/archive.html
+++ b/archive.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://yasu-works.github.io/test-up1/icons8.png">
     <title>記事一覧|Tinderで出会ってみた</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
     <!-- ヘッダー -->
