--- a/category2.html
+++ b/category2.html
@@ -184,22 +184,22 @@
                 </div>
                 <div>
                     <ul class="category-list">
-                        <a href="#">
+                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category1.html">
                             <li class="category-item category-img1">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="#">
+                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category2.html">
                             <li class="category-item category-img2">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="#">
+                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category3.html">
                             <li class="category-item category-img3">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="#">
+                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category4.html">
                             <li class="category-item category-img4">
                                 <p>カテゴリ名</p>
                             </li>
