--- a/category3.html
+++ b/category3.html
@@ -55,13 +55,13 @@
             <section class="archive-title category-bottom">
                 <!-- カテゴリタイトル：PC表示 -->
                 <div class="category-title-block-pc">
-                    <img class="category-title-img-pc" src="img/category-img-pc3.png" alt="メインビジュアルPC表示">
+                    <img class="category-title-img-pc" src="https://yasu-works.github.io/test-up1/category-img-pc3.png" alt="カテゴリタイトルPC表示">
                     <h2 class="category-title-pc">カテゴリ名</h2>
                 </div>
 
                 <!-- カテゴリタイトル：SP表示 -->
                 <div class="category-title-block-sp">
-                    <img class="category-title-img-sp" src="img/category-img-sp3.png" alt="メインビジュアルPC表示">
+                    <img class="category-title-img-sp" src="https://yasu-works.github.io/test-up1/category-img-sp3.png" alt="カテゴリタイトルSP表示">
                     <h2 class="category-title-sp">カテゴリ名</h2>
                 </div>
             </section>
