--- a/archive.html
+++ b/archive.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://yasu-works.github.io/test-up1/icons8.png">
+    <!-- タイトル名 -->
     <title>記事一覧|Tinderで出会ってみた</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -16,8 +17,10 @@
     <header id="header">
         <div class="header-wrapper">
             <div class="site-title">
-                <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
-                <h1>Tinderで出会ってみた</h1>
+                <a href="https://yasu-works.github.io/test-up1/">
+                    <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
+                    <h1>Tinderで出会ってみた</h1>
+                </a>
             </div>
 
             <!-- ハンバーガーメニューボタン -->
