--- a/category1.html
+++ b/category1.html
@@ -57,10 +57,8 @@
             <section class="archive-title category-bottom">
                 <!-- カテゴリタイトル：PC表示 -->
                 <div class="category-title-block-pc">
-                    <a href="https://yasu-works.github.io/test-up1/">
-                        <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
-                        <h1>Tinderで出会ってみた</h1>
-                    </a>
+                    <img class="category-title-img-sp" src="https://yasu-works.github.io/test-up1/category-img-pp1.png" alt="カテゴリタイトルPC表示">
+                    <h2 class="category-title-pc">カテゴリ名</h2>
                 </div>
 
                 <!-- カテゴリタイトル：SP表示 -->
